[package]
name = "lxmf_rust"
version = "0.1.0"
edition = "2021"
autobins = false

[[bin]]
name = "lxmf_send"
path = "src/bin/lxmf_send.rs"

[[bin]]
name = "lxmf_recv"
path = "src/bin/lxmf_recv.rs"

[[bin]]
name = "lxmd"
path = "src/bin/lxmd.rs"

[[bin]]
name = "decrypt_test"
path = "src/bin/decrypt_test.rs"

[[bin]]
name = "rmp_format_test"
path = "src/bin/rmp_format_test.rs"

[dependencies]
reticulum_rust = { path = "../Reticulum-rust" }
rmp = "0.8.14"
rmpv = "=1.0.0"
rmp-serde = "1.1"
serde = { version = "1.0", features = ["derive"] }
serde_bytes = "0.11"
hkdf = "0.12.3"
sha2 = "0.10"
rand = "0.8"
once_cell = "1.19"
uuid = "=1.7.0"
base64 = "0.22"
data-encoding = "2.5"
atty = "0.2"
ctrlc = "3.4"
